Migrate from LangChain4j to agentic4j for Java 8 compatibility
Replace LangChain4j 0.36.2 with agentic4j 0.1.1, a lightweight
Java 8 compatible agent framework. Downgrade Spring Boot 3.3 to 2.7.18
and all source code from Java 17 to Java 8 syntax (no var, records,
text blocks, or switch expressions).

- pom.xml: Spring Boot 2.7.18, agentic4j-openai 0.1.1, Java 8 target
- PriceAgent: AgentBuilder replaces AiServices, @SystemPrompt/@AgentTool/@Param
- Tools: @AgentTool/@Param replace @Tool/@P
- ChatController: non-streaming /api/chat, Java 8 POJO replaces record
- DatabaseInitializer: Calendar/SimpleDateFormat replace LocalDate
- Frontend: switched to non-streaming /api/chat endpoint
- README: updated to reflect agentic4j and Java 8