@@ -1,19 +1,22 @@
 package com.priceagent.tools;
 
 import com.priceagent.db.DatabaseManager;
-import dev.langchain4j.agent.tool.P;
-import dev.langchain4j.agent.tool.Tool;
+import com.agentic4j.core.annotation.AgentTool;
+import com.agentic4j.core.annotation.Param;
 
 import java.sql.*;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.regex.Pattern;
 
 public class ExecuteSqlTool {
 
-    private static final Set<String> BLOCKED_KEYWORDS = Set.of(
+    private static final Set<String> BLOCKED_KEYWORDS = new HashSet<String>(Arrays.asList(
         "INSERT", "UPDATE", "DELETE", "DROP", "ALTER", "TRUNCATE", "CREATE", "EXEC", "MERGE"
-    );
+    ));
 
     private static final int MAX_ROWS = 500;
 
@@ -23,11 +26,10 @@ public class ExecuteSqlTool {
         this.dbManager = dbManager;
     }
 
-    @Tool("Execute a read-only SQL SELECT query against the market price database (mkt_priceflat table). " +
+    @AgentTool("Execute a read-only SQL SELECT query against the market price database (mkt_priceflat table). " +
           "Returns columns and rows. Only SELECT statements are allowed. " +
           "Use this to discover data, search products, compare prices, and analyze trends.")
-    public String executeSql(@P("The SQL SELECT query to execute") String query) {
-        // Safety check - use word boundary regex to avoid false positives (e.g., "createddate" matching "CREATE")
+    public String executeSql(@Param("The SQL SELECT query to execute") String query) {
         String upperQuery = query.toUpperCase().trim();
 
         if (!upperQuery.startsWith("SELECT")) {
@@ -35,41 +37,45 @@ public class ExecuteSqlTool {
         }
 
         for (String keyword : BLOCKED_KEYWORDS) {
-            if (java.util.regex.Pattern.compile("\\b" + keyword + "\\b").matcher(upperQuery).find()) {
+            if (Pattern.compile("\\b" + keyword + "\\b").matcher(upperQuery).find()) {
                 return "ERROR: " + keyword + " statements are not allowed. Only SELECT queries are permitted.";
             }
         }
 
-        try (Connection conn = dbManager.getConnection();
-             Statement stmt = conn.createStatement()) {
+        try {
+            Connection conn = dbManager.getConnection();
+            try {
+                Statement stmt = conn.createStatement();
+                try {
+                    stmt.setQueryTimeout(30);
+                    ResultSet rs = stmt.executeQuery(query);
+                    ResultSetMetaData meta = rs.getMetaData();
+                    int colCount = meta.getColumnCount();
 
-            stmt.setQueryTimeout(30);
-            ResultSet rs = stmt.executeQuery(query);
-            ResultSetMetaData meta = rs.getMetaData();
-            int colCount = meta.getColumnCount();
+                    List<String> columns = new ArrayList<String>();
+                    for (int i = 1; i <= colCount; i++) {
+                        columns.add(meta.getColumnLabel(i));
+                    }
 
-            // Build column headers
-            List<String> columns = new ArrayList<>();
-            for (int i = 1; i <= colCount; i++) {
-                columns.add(meta.getColumnLabel(i));
-            }
+                    List<List<String>> rows = new ArrayList<List<String>>();
+                    int rowCount = 0;
+                    while (rs.next() && rowCount < MAX_ROWS) {
+                        List<String> row = new ArrayList<String>();
+                        for (int i = 1; i <= colCount; i++) {
+                            String value = rs.getString(i);
+                            row.add(value != null ? value : "NULL");
+                        }
+                        rows.add(row);
+                        rowCount++;
+                    }
 
-            // Build rows
-            List<List<String>> rows = new ArrayList<>();
-            int rowCount = 0;
-            while (rs.next() && rowCount < MAX_ROWS) {
-                List<String> row = new ArrayList<>();
-                for (int i = 1; i <= colCount; i++) {
-                    String value = rs.getString(i);
-                    row.add(value != null ? value : "NULL");
+                    return formatResult(columns, rows, rowCount, rs.next());
+                } finally {
+                    stmt.close();
                 }
-                rows.add(row);
-                rowCount++;
+            } finally {
+                conn.close();
             }
-
-            // Format as readable text table
-            return formatResult(columns, rows, rowCount, rs.next());
-
         } catch (SQLException e) {
             return "SQL ERROR: " + e.getMessage();
         }
@@ -77,11 +83,11 @@ public class ExecuteSqlTool {
 
     private String formatResult(List<String> columns, List<List<String>> rows, int rowCount, boolean hasMore) {
         if (rows.isEmpty()) {
-            return "Query returned 0 rows. Columns: " + String.join(", ", columns);
+            return "Query returned 0 rows. Columns: " + join(", ", columns);
         }
 
         StringBuilder sb = new StringBuilder();
-        sb.append("Columns: ").append(String.join(" | ", columns)).append("\n");
+        sb.append("Columns: ").append(join(" | ", columns)).append("\n");
         sb.append("Rows returned: ").append(rowCount);
         if (hasMore) {
             sb.append(" (truncated at ").append(MAX_ROWS).append(")");
@@ -89,9 +95,18 @@ public class ExecuteSqlTool {
         sb.append("\n---\n");
 
         for (List<String> row : rows) {
-            sb.append(String.join(" | ", row)).append("\n");
+            sb.append(join(" | ", row)).append("\n");
         }
 
+        return sb.toString();
+    }
+
+    private static String join(String delimiter, List<String> parts) {
+        StringBuilder sb = new StringBuilder();
+        for (int i = 0; i < parts.size(); i++) {
+            if (i > 0) sb.append(delimiter);
+            sb.append(parts.get(i));
+        }
         return sb.toString();
     }
 }
